src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_id__concat_idents! (parse it_fails_on_incorrect).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<FIdent<\"id\">>(q.clone())"
---
Err(
    Error(
        "Expected 'id'",
    ),
)
