src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_id__concat_idents! (parse it_matches_fixed).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<FIdent<\"id\">>(q.clone())"
---
Ok(
    FIdent(
        Span,
    ),
)
