src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_id__it_fails_on_incorrect.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse FIdent<\"id\"> : ident),\n    insta_match_test!(* peek FIdent<\"id\"> : ident))"
---
(
    Err(
        Error(
            "Expected 'id'",
        ),
    ),
    None,
)
