src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_id__it_matches_fixed.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse FIdent<\"id\"> : id),\n    insta_match_test!(* peek FIdent<\"id\"> : id))"
---
(
    Ok(
        FIdent(
            Span,
        ),
    ),
    Some(
        1,
    ),
)
