src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_id__it_matches_id.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse Ident : id), insta_match_test!(* peek Ident : id))"
---
(
    Ok(
        Ident(
            id,
        ),
    ),
    Some(
        1,
    ),
)
